--- a/home.html
+++ b/home.html
@@ -33,11 +33,11 @@
         <nav>
             <div class="navwrapper">
                 <div class="linksheader">
-                    <a href="">home</a>
-                    <a href="">about</a>
-                    <a href="">category</a>
-                    <a href="">latest news</a>
-                    <a href="">contact</a>
+                    <a href="home.html">home</a>
+                    <a href="about.html">about</a>
+                    <a href="category.html">category</a>
+                    <a href="latestnews.html">latest news</a>
+                    <a href="contact.html">contact</a>
                 <a href=""></div></a>
                 <div class="socialright">
                     <a href=""><i class="fa-brands fa-facebook"></i></a>
