--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://kit.fontawesome.com/e7815bde46.css" crossorigin="anonymous">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.min.css">
-    <title>Category</title>
+    <title>Contact</title>
 </head>
 <body>
     <header>
@@ -31,6 +31,9 @@
         </div>
         <nav>
             <div class="navwrapper">
+                <div class="logoresponsive">
+                    <img src="img/logo/logo.png" alt="">
+                </div>
                 <div class="linksheader">
                     <a href="home.html">home</a>
                     <a href="about.html">about</a>
@@ -46,6 +49,11 @@
                 </div>
                 <div class="searchbutton">
                     <a href=""><i class="fa-solid fa-magnifying-glass"></i></a>
+                </div>
+                <div class="burgermenu">
+                    <div class="line"></div>
+                    <div class="line"></div>
+                    <div class="line"></div>
                 </div>
             </div>
         </nav>
@@ -75,18 +83,24 @@
                 <div class="formright">
                     <address>
                         <i class="fa-solid fa-house"></i>
-                        <strong>Buttonwood, California.</strong>
-                        <span>Mon to Fri 9am to 6pm</span>
+                        <div class="formright_text">
+                            <strong>Buttonwood, California.</strong> <br>
+                            <span>Mon to Fri 9am to 6pm</span>
+                        </div>
                     </address>
                     <div class="telephonenumber">
-                        <i class="fa-solid fa-mobile-screen"></i>
-                        <strong>+1 253 565 2365</strong>
-                        <span>Rosemead, CA 91770</span>
+                        <i class="fa-solid fa-tablet-screen-button"></i>
+                        <div class="formright_text">
+                            <strong>+1 253 565 2365</strong> <br>
+                            <span>Rosemead, CA 91770</span>
+                        </div>
                     </div>
                     <div class="email">
                         <i class="fa-regular fa-envelope"></i>
-                        <strong>+1 253 565 2365</strong>
-                        <span>Rosemead, CA 91770</span>
+                        <div class="formright_text">
+                            <strong>+1 253 565 2365</strong> <br>
+                            <span>Rosemead, CA 91770</span>
+                        </div>
                     </div>
                    
                 </div>
@@ -134,6 +148,10 @@
             </div>
         </div>
     </footer>
+    <div class="arrowfixedright">
+        <i class="fa-solid fa-arrow-up"></i>
+    </div>
+    
 
     <script src="https://kit.fontawesome.com/e7815bde46.js" crossorigin="anonymous"></script>
     <script src="js/main.js"></script>
