--- a/home.html
+++ b/home.html
@@ -32,6 +32,9 @@
         </div>
         <nav>
             <div class="navwrapper">
+                <div class="logoresponsive">
+                    <img src="img/logo/logo.png" alt="">
+                </div>
                 <div class="linksheader">
                     <a href="home.html">home</a>
                     <a href="about.html">about</a>
@@ -48,6 +51,11 @@
                 <div class="searchbutton">
                     <a href=""><i class="fa-solid fa-magnifying-glass"></i></a>
                 </div>
+                <div class="burgermenu">
+                    <div class="line"></div>
+                    <div class="line"></div>
+                    <div class="line"></div>
+                </div>
             </div>
         </nav>
     </header>
@@ -56,8 +64,7 @@
         <!-- First Block -->
         <div class="firstblock">
             <div class="business">
-               
-                <div class="texthero">
+               <div class="texthero">
                     <div id="button2"class="littlebutton">business</div>
                     <h1>Anna Lora Stuns In White At Her Australian Premiere</h1>
                     <small>by Cristina Blasi - Oct 27</small>
@@ -278,8 +285,13 @@
         </div>
 
     </div>
+
+    <!-- Footer -->
+    
     <div class="footerbanner">
-        <img src="img/gallery/body_card3.png" alt="">
+        <div class="footerbannerimg">
+            <img src="img/gallery/body_card3.png" alt="">
+        </div>
     </div>
     <footer >
         <div class="footercontainer">
@@ -322,7 +334,7 @@
         </div>
     </footer>
     <div class="arrowfixedright">
-        <i></i>
+        <i class="fa-solid fa-arrow-up"></i>
     </div>
     <script src="https://kit.fontawesome.com/e7815bde46.js" crossorigin="anonymous"></script>
     <script src="js/main.js"></script>
