--- a/latestnews.html
+++ b/latestnews.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://kit.fontawesome.com/e7815bde46.css" crossorigin="anonymous">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.min.css">
-    <title>Category</title>
+    <title>Latest News</title>
 </head>
 <body>
     <header>
@@ -31,6 +31,9 @@
         </div>
         <nav>
             <div class="navwrapper">
+                <div class="logoresponsive">
+                    <img src="img/logo/logo.png" alt="">
+                </div>
                 <div class="linksheader">
                     <a href="home.html">home</a>
                     <a href="about.html">about</a>
@@ -47,6 +50,11 @@
                 <div class="searchbutton">
                     <a href=""><i class="fa-solid fa-magnifying-glass"></i></a>
                 </div>
+                <div class="burgermenu">
+                    <div class="line"></div>
+                    <div class="line"></div>
+                    <div class="line"></div>
+                </div>
             </div>
         </nav>
     </header>
@@ -57,16 +65,7 @@
         
                     <div class="newleftwrapper">
                         <div class="newsleft">
-                            <div class="textnewsleft">
-                                <h1>Whats New</h1>
-                                <div class="links">
-                                    <a href="">Lifestyle</a>
-                                    <a href="">Travel</a>
-                                    <a href="">Fashion</a>
-                                    <a href="">Sports</a>
-                                    <a href="">Technology</a>
-                                </div>
-                            </div>
+                           
                             <div class="newsleftcontainer">
                                 <div class="imglatestnews">
                                     <img src="img/trending/trending_top.jpg" alt="">
@@ -189,7 +188,9 @@
             </div>
         </div>
     </footer>
-
+    <div class="arrowfixedright">
+        <i class="fa-solid fa-arrow-up"></i>
+    </div>
     <script src="https://kit.fontawesome.com/e7815bde46.js" crossorigin="anonymous"></script>
     <script src="js/main.js"></script>
 </body>
